<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f8f9">

    <RelativeLayout
        android:id="@+id/clock_title_re"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/clock_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/clock_title"
            android:textColor="#333333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/clock_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:text="@string/clock_save"
            android:textColor="#2d95ff"
            android:textSize="15sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/clock_title_re">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--内容-->
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/click_content_edit"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="#fff"
                android:hint="@string/clock_content_hint"
                android:padding="16dp"
                android:textColor="#666"
                android:textColorHint="#999"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:text="@string/clock_time_title"
                android:textColor="#333333"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="#fff"
                android:orientation="horizontal">

                <com.remind.view.WheelView
                    android:id="@+id/clock_time_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.remind.view.WheelView
                    android:id="@+id/clock_time_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:text="@string/clock_repeat"
                android:textColor="#333333"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="#fff"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/clock_weekday"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/clock_weekdays"
                        android:textColor="#ff333333"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/clock_weekend"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/clock_weekends"
                        android:textColor="#ff2d95ff"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:text="@string/clock_remind"
                android:textColor="#333333"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:text="@string/clock_remind_way"
                        android:textColor="#333333"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/clock_clock_audio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="9dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="9dp"
                        android:src="@mipmap/group" />

                    <ImageView
                        android:id="@+id/clock_clock_shake"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="9dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="9dp"
                        android:src="@mipmap/group2" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="#a9a8a8" />

                <!--声音-->
                <LinearLayout
                    android:id="@+id/clock_audio_select_ll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="@string/clock_sound"
                        android:textColor="#999999"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/clock_audio_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="Waves"
                        android:textColor="#999999"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_chevron_right" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>